<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.nonxedy.nonchat</groupId>
  <artifactId>nonchat-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>nonchat — Parent</name>

  <!-- ===== Submodules ===== -->
  <modules>
    <module>api</module>
    <module>core</module>
    <module>v1_21_R1</module>
    <module>v26_1_R1</module>
    <module>v26_2_R1</module>
    <module>v26_3_R1</module>
    <module>plugin</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <revision>1.6.4</revision>
    <!-- Shared library versions -->
    <adventure.version>5.0.1</adventure.version>
    <luckperms.version>5.5</luckperms.version>
    <placeholderapi.version>2.12.2</placeholderapi.version>
    <vault.version>1.7.1</vault.version>
    <lombok.version>1.18.46</lombok.version>
    <caffeine.version>3.2.3</caffeine.version>
    <discordsrv.version>1.28.0</discordsrv.version>
    <faststats.version>0.22.0</faststats.version>
    <junit.version>5.11.4</junit.version>
    <surefire.version>3.5.3</surefire.version>
  </properties>

  <repositories>
    <repository>
      <id>papermc-repo</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>aikar</id>
      <url>https://repo.aikar.co/content/groups/aikar/</url>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>Scarsz-Nexus</id>
      <url>https://nexus.scarsz.me/content/groups/public/</url>
    </repository>
    <repository>
      <id>faststats-releases</id>
      <url>https://repo.faststats.dev/releases</url>
    </repository>
    <repository>
      <id>sonatype</id>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <!-- ===== Shared dependency management ===== -->
  <dependencyManagement>
    <dependencies>
      <!-- Internal modules -->
      <dependency>
        <groupId>com.nonxedy.nonchat</groupId>
        <artifactId>nonchat-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.nonxedy.nonchat</groupId>
        <artifactId>nonchat-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- External — provided (server has them) -->
      <dependency>
        <groupId>net.luckperms</groupId>
        <artifactId>api</artifactId>
        <version>${luckperms.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>me.clip</groupId>
        <artifactId>placeholderapi</artifactId>
        <version>${placeholderapi.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.github.MilkBowl</groupId>
        <artifactId>VaultAPI</artifactId>
        <version>${vault.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.discordsrv</groupId>
        <artifactId>discordsrv</artifactId>
        <version>${discordsrv.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Shaded libraries -->
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.faststats.metrics</groupId>
        <artifactId>bukkit</artifactId>
        <version>${faststats.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- ===== Build plugins ===== -->
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
